     traffic calculations in rollover situations, cfg: 64bitInterfaceCounters
   - Possibility in queries to merge data from multiple interfaces to one
     output with interface1+interface2 syntax
   - Highlight current day in top list when visible
   - Changes in interface specific detected bandwidth limits are reported
     in the log
 - Notes
   - Added clarification to the man page that the 'jsonversion' and
     'xmlversion' fields in the --json and --xml outputs should be seen as
     the API version and compared to the previously used version in 3rd party
     implementations for verifying compatibility
   - Default value of UpdateInterval is now 20 instead of previous 30 seconds


2.1 / 6-Dec-2018

 - Fixed
   - --oneline could segmentation fault if database had total traffic values
     set but didn't have any daily or monthly traffic (Arch bug #60588)
   - No proper error message was produced when querying interface which didn't
     exist in the database
   - Several typos and spelling mistakes in documentation
   - Daemon:waittimesync_does_not_wait_with_new_interfaces test was failing if
     the system used a time zone with a negative numeric value
   - Traffic estimate and average rate for ongoing month was not being
     calculated correctly when MonthRotate had a value greater than 1
   - Accuracy of traffic estimate and average rate for the ongoing month could
     be slightly skewed depending on the used time zone
 - New
   - Remove possible PollInterval and UpdateInterval drift over time
   - Sync SaveInterval to full minutes


2.0 / 21-Oct-2018

 - Fixed
   - Data rate calculations when using SI decimal prefixes
   - Workaround for filled arcs not drawn correctly with some versions
     of libgd (libgd/libgd#351)
 - New
   - C struct dump database has been replaced with sqlite database,
     full data import included from legacy databases of versions 1.3 - 1.18
   - User configurable data retention durations for all resolutions with